# docs/swagger.yaml
@@ -7,7 +7,7 @@ definitions:
         type: string
       description:
         type: string
-      isAdopt:
+      isAdopted:
         type: boolean
       name:
         type: string
@@ -34,6 +34,8 @@ definitions:
         type: string
       description:
         type: string
+      id:
+        type: integer
       isAdopt:
         type: boolean
       name:
@@ -53,8 +55,6 @@ definitions:
         type: string
       description:
         type: string
-      isAdopt:
-        type: boolean
       name:
         type: string
       photo:
@@ -81,6 +81,13 @@ definitions:
         type: array
       total:
         type: integer
+    type: object
+  schemas.UpdateIsAdoptPetRequests:
+    properties:
+      isAdopted:
+        type: boolean
+    required:
+    - isAdopted
     type: object
   schemas.UserCreateRequest:
     properties:
@@ -136,8 +143,12 @@ definitions:
       photo:
         type: string
     required:
+    - about
+    - city
     - email
     - name
+    - phone
+    - photo
     type: object
   schemas.UsersResponse:
     properties:
@@ -268,6 +279,36 @@ paths:
         "422":
           description: Unprocessable Entity
       summary: Update a pet
+      tags:
+      - pet
+  /pets/{id}/adopted:
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: Pet id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Pet data
+        in: body
+        name: pet
+        required: true
+        schema:
+          $ref: '#/definitions/schemas.UpdateIsAdoptPetRequests'
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "422":
+          description: Unprocessable Entity
+      summary: update a pet's adoption status
       tags:
       - pet
   /shelters:
